cmake_minimum_required(VERSION 3.26)
project(CS216ProgrammingExercise1212)

set(CMAKE_CXX_STANDARD 17)

add_executable(CS216ProgrammingExercise1212 main.cpp
        arrayListType.cpp
        arrayListType.h
        unorderedArrayListType.cpp
        unorderedArrayListType.h
        unorderedSetType.cpp
        unorderedSetType.h)
